--- a/css_2/style.css
+++ b/css_2/style.css
@@ -564,31 +564,17 @@ main .bg {
   font-size: 20px;
 }
 .left ul li:hover a {
-  border-color: #356bf7;
-  color: #356bf7;
-  box-shadow: 0px 0px 5px 0px #00000049;
-  z-index: 10;
-}
-.left ul li:hover a svg {
-  fill: #356bf7;
-}
-.left ul li:hover a i {
-  color: #356bf7;
+  background: #ededed;
 }
 .left ul li:active .smallList, .left ul li.active .smallList {
   display: block;
 }
 .left ul li:active a, .left ul li.active a {
-  border-color: #356bf7;
-  color: #356bf7;
-  box-shadow: 0px 0px 5px 0px #00000049;
-  z-index: 10;
+  border-color: transparent;
+  color: #e45b08;
 }
-.left ul li:active a svg, .left ul li.active a svg {
-  fill: #356bf7;
-}
-.left ul li:active a i, .left ul li.active a i {
-  color: #356bf7;
+.left ul li:active a .total, .left ul li.active a .total {
+  color: #e45b08;
 }
 .left ul li.onLive .live {
   display: block;
@@ -596,10 +582,13 @@ main .bg {
 .left ul li:last-child {
   margin-bottom: 20px;
 }
+.left ul li:last-child a {
+  border: none;
+}
 .left ul li a {
   display: block;
-  color: #454545;
-  width: 100%;
+  color: #1b1b1b;
+  width: 90%;
   background: #ffffff;
   height: 45px;
   line-height: 45px;
@@ -607,14 +596,15 @@ main .bg {
   padding-left: 50px;
   position: relative;
   box-sizing: border-box;
-  border: solid 1px transparent;
+  border-bottom: solid 1px #e0e0e0;
+  margin: 0px auto;
 }
 .left ul li a i {
   position: absolute;
   top: 12px;
   left: 18px;
   font-size: 18px;
-  color: #8d8d8d;
+  color: #f08512;
 }
 .left ul li a i::before {
   margin: 0px auto;
@@ -634,14 +624,14 @@ main .bg {
   position: absolute;
   left: 18px;
   top: 12px;
-  fill: #8d8d8d;
+  fill: #f08512;
 }
 .left ul li a .total {
   position: absolute;
   right: 10px;
   top: 0px;
   font-size: 13px;
-  color: #454545;
+  color: #356bf7;
 }
 .left ul li a .live {
   display: none;
@@ -653,14 +643,14 @@ main .bg {
   transform: translateY(-50%);
   right: 42px;
   font-size: 12px;
-  background: linear-gradient(to right, #ffab00 0%, #ff4802 100%);
+  background: #1fb113;
   color: #ffffff;
   padding: 0px 4px;
   border-radius: 3px;
 }
 .left ul li .smallList {
   display: none;
-  width: calc(100% - 30px);
+  width: 80%;
   height: 30px;
   background: #f7f7f7;
   border-bottom: solid 1px #e8e8e8;
@@ -669,6 +659,7 @@ main .bg {
   font-size: 12px;
   color: #454545;
   cursor: pointer;
+  margin: 0px auto;
 }
 .left ul li .smallList:hover, .left ul li .smallList:active, .left ul li .smallList.active {
   background: #356bf7;
@@ -706,12 +697,12 @@ main .bg {
 .right .statusWindow {
   width: 100%;
   height: 113px;
-  background: #f5f5f5;
+  background: #ffffff;
   position: relative;
 }
 .right .statusWindow p {
-  background: #ffffff;
-  color: #454545;
+  background: #f08512;
+  color: #ffffff;
   padding: 7px 15px;
   font-size: 12px;
 }
@@ -727,11 +718,12 @@ main .bg {
   padding: 5px 15px 3px;
   font-size: 14px;
   position: relative;
-  background: #ffffff;
+  background: #ededed;
   color: #454545;
   margin-bottom: 3px;
 }
 .right .statusWindow ul li::before {
+  display: none;
   content: "";
   position: absolute;
   width: 1px;
@@ -790,9 +782,8 @@ main .bg {
   text-align: center;
 }
 .right .liveWindow .title {
-  background: #ffffff;
-  border-bottom: solid 1px #f6f6f6;
-  color: #454545;
+  background: #f08512;
+  color: #ffffff;
   padding: 7px 15px;
   font-size: 12px;
   text-align: left;
@@ -863,21 +854,19 @@ main .bg {
 .right .room .twobut button {
   width: 49.5%;
   height: 100%;
-  background: #e6e6e6;
-  color: #595959;
+  background: #f4f4f4;
+  color: #7b7b7b;
   font-size: 14px;
   float: left;
   margin-right: 1%;
   border-radius: 3px 3px 0px 0px;
-  border: solid 1px transparent;
 }
 .right .room .twobut button:last-child {
   margin: 0px;
 }
 .right .room .twobut button:hover, .right .room .twobut button:active, .right .room .twobut button.active {
-  background: #ffffff;
-  border: solid 1px #356bf7;
-  color: #356bf7;
+  background: #f08512;
+  color: #ffffff;
 }
 .right .room .onebut {
   width: 100%;
@@ -886,15 +875,10 @@ main .bg {
 .right .room .onebut button {
   width: 100%;
   height: 100%;
-  background: #e6e6e6;
-  color: #595959;
+  background: #f08512;
+  color: #ffffff;
   font-size: 14px;
   border-radius: 3px 3px 0px 0px;
-  border: solid 1px transparent;
-}
-.right .room .onebut button:hover, .right .room .onebut button:active, .right .room .onebut button.active {
-  background: #ffffff;
-  color: #454545;
 }
 .right .room .livelist {
   display: none;
@@ -1062,7 +1046,7 @@ main .bg {
   overflow-y: auto;
   overflow-x: hidden;
   scrollbar-width: thin;
-  background: #f7f7f7;
+  background: #f08512;
 }
 .right .room .bettingStatus::-webkit-scrollbar {
   width: 5px;
@@ -1073,7 +1057,7 @@ main .bg {
   border-radius: 10px;
 }
 .right .room .bettingStatus::-webkit-scrollbar-thumb {
-  background: linear-gradient(to right, #ffab00 0%, #ff4802 100%);
+  background: linear-gradient(to bottom, #ffab00 0%, #ff4802 100%);
   border-radius: 10px;
 }
 .right .room .bettingStatus.open {
@@ -1110,15 +1094,12 @@ main .bg {
   box-shadow: none;
 }
 .playBoard tr:nth-of-type(odd) {
-  background: #f5f5f5;
+  background: #fbfbfb;
 }
 .playBoard tr:hover, .playBoard tr:active, .playBoard tr.active {
-  border: solid 1px #356bf7;
-  background: #ffffff;
-  box-shadow: 0px 0px 5px 2px #00000017;
+  background: #fffce5;
 }
 .playBoard tr:hover td, .playBoard tr:active td, .playBoard tr.active td {
-  border-top: solid 1px #356bf7;
   color: #356bf7;
 }
 .playBoard tr:hover td.allScore, .playBoard tr:active td.allScore, .playBoard tr.active td.allScore {
@@ -1172,7 +1153,7 @@ main .bg {
   color: #356bf7;
 }
 .playBoard tr td .gameStyle {
-  color: #ffab00;
+  color: #ed720f;
 }
 .playBoard tr td .gameTime {
   color: #8d8d8d;
@@ -1273,13 +1254,13 @@ main .bg {
 .playBoard tr td a.tbimg3 {
   width: auto;
   height: auto;
-  color: #595959;
+  color: #138028;
 }
 .playBoard tr td.overGame {
-  color: #ffab00;
+  color: #878787;
 }
 .playBoard tr td span.overGame {
-  color: #ffab00;
+  color: #878787;
 }
 .playBoard tr td p:nth-of-type(1) {
   padding-bottom: 8px;
@@ -2219,14 +2200,17 @@ main .bg {
   padding: 7px;
   color: #595959;
   border-style: solid;
-  border-width: 0px 0px 1px 0px;
-  border-color: #f7f7f7;
+  border-width: 0px 0px 2px 0px;
+  border-color: #f08512;
   vertical-align: middle;
   background: #ffffff;
   font-size: 12px;
 }
 .bettingBoard tr td.waiting {
   color: #356bf7;
+}
+.bettingBoard tr td.sus {
+  color: #1ba448;
 }
 .bettingBoard tr td.listName {
   padding: 15px 7px;
@@ -2241,9 +2225,7 @@ main .bg {
 }
 .bettingBoard tr td:nth-of-type(odd) {
   border-right-width: 1px;
-}
-.bettingBoard tr td:nth-of-type(even) {
-  border-left-width: 1px;
+  border-right-color: #eef0f6;
 }
 .bettingBoard tr td:last-child {
   border-right-width: 0px;
@@ -4636,7 +4618,7 @@ main .bg {
   display: block;
 }
 .topfix .nor i {
-  color: #356bf7;
+  color: #353535;
   font-size: 18px;
   margin: 0px 6px 0px 12px;
   transform: translateY(2px);
@@ -4646,7 +4628,7 @@ main .bg {
   height: 18px;
   margin: 0px 6px 0px 12px;
   transform: translateY(4px);
-  fill: #356bf7;
+  fill: #353535;
 }
 .topfix .nor .gameName {
   display: inline-block;
@@ -4684,7 +4666,7 @@ main .bg {
 }
 .topfix .nor .reWeb .clock {
   position: absolute;
-  background: #595959;
+  background: #f08512;
   top: 50%;
   right: -36px;
   width: 30px;
@@ -8018,6 +8000,12 @@ main .bg {
   background: #356bf7;
   bottom: -2px;
   left: 0px;
+}
+.minetopfix .fixbar ul li.only {
+  width: auto;
+  color: #356bf7;
+  pointer-events: none;
+  padding-left: 15px;
 }
 .minetopfix .fixbar p {
   line-height: 45px;
