--- a/scss/_myself.scss
+++ b/scss/_myself.scss
@@ -847,6 +847,15 @@
                     border-color: #32980e;
                     background: linear-gradient(to bottom,#141414 0%,#434343 100%);
                 }
+
+                &.only {
+                    width: auto;
+                    border: none;
+                    background: none;
+                    color: #33ba04;
+                    pointer-events: none;
+                    padding-left: 15px;
+                }
             }
         }
 
