--- a/scss_2/_leftside.scss
+++ b/scss_2/_leftside.scss
@@ -187,18 +187,7 @@
             &:hover {
 
                 a {
-                    border-color: #356bf7;
-                    color: #356bf7;
-                    box-shadow: 0px 0px 5px 0px #00000049;
-                    z-index: 10;
-
-                    svg {
-                        fill: #356bf7;
-                    }
-
-                    i {
-                        color: #356bf7;
-                    }
+                    background: #ededed;
                 }
             }
 
@@ -209,17 +198,11 @@
                 }
 
                 a {
-                    border-color: #356bf7;
-                    color: #356bf7;
-                    box-shadow: 0px 0px 5px 0px #00000049;
-                    z-index: 10;
+                    border-color: transparent;
+                    color: #e45b08;
 
-                    svg {
-                        fill: #356bf7;
-                    }
-
-                    i {
-                        color: #356bf7;
+                    .total {
+                        color: #e45b08;
                     }
                 }
             }
@@ -233,12 +216,16 @@
 
             &:last-child {
                 margin-bottom: 20px;
+
+                a {
+                    border: none;
+                }
             }
 
             a {
                 display: block;
-                color: #454545 ;
-                width: 100%;
+                color: #1b1b1b;
+                width: 90%;
                 background: #ffffff;
                 height: 45px;
                 line-height: 45px;
@@ -246,7 +233,8 @@
                 padding-left: 50px;
                 position: relative;
                 box-sizing: border-box;
-                border: solid 1px transparent;
+                border-bottom: solid 1px #e0e0e0;
+                margin: 0px auto;
 
                 //字前小圖
                 i {
@@ -254,7 +242,7 @@
                     top: 12px;
                     left: 18px;
                     font-size: 18px;
-                    color: #8d8d8d;
+                    color: #f08512;
 
                     &::before {
                         margin: 0px auto;
@@ -281,7 +269,7 @@
                     position: absolute;
                     left: 18px;
                     top: 12px;
-                    fill: #8d8d8d;
+                    fill: #f08512;
                 }
 
                 //字後小框
@@ -290,7 +278,7 @@
                     right: 10px;
                     top: 0px;
                     font-size: 13px;
-                    color: #454545;
+                    color: #356bf7;
                 }
 
                 //LIVE小框
@@ -304,7 +292,7 @@
                     transform: translateY(-50%);
                     right: 42px;
                     font-size: 12px;
-                    background: linear-gradient(to right,#ffab00 0%, #ff4802 100%);
+                    background: #1fb113;
                     color: #ffffff;
                     padding: 0px 4px;
                     border-radius: 3px;
@@ -313,7 +301,7 @@
 
             .smallList {
                 display: none;
-                width: calc(100% - 30px);
+                width: 80%;
                 height: 30px;
                 background: #f7f7f7;
                 border-bottom: solid 1px #e8e8e8;
@@ -322,6 +310,7 @@
                 font-size: 12px;
                 color: #454545;
                 cursor: pointer;
+                margin: 0px auto;
 
                 &:hover,&:active,&.active {
                     background: #356bf7;
