--- a/scss_2/_table.scss
+++ b/scss_2/_table.scss
@@ -49,16 +49,13 @@
 		}
 
 		&:nth-of-type(odd) {
-			background: #f5f5f5;
+			background: #fbfbfb;
 		}
 
 		&:hover,&:active,&.active {
-			border: solid 1px #356bf7;
-			background: #ffffff;
-			box-shadow: 0px 0px 5px 2px #00000017;
+			background: #fffce5;
 
 			td {
-				border-top: solid 1px #356bf7;
 				color: #356bf7;
 
 				&.allScore {
@@ -138,7 +135,7 @@
 
 			//遊戲種類著名顏色
 			.gameStyle {
-				color: #ffab00;
+				color: #ed720f;
 			}
 
 			//已進行時間
@@ -265,7 +262,7 @@
 				&.tbimg3 {
 					width: auto;
 					height: auto;
-					color: #595959;
+					color: #138028;
 				}
 			}
 			
@@ -273,12 +270,12 @@
 
 			//已完賽顏色
 			&.overGame {
-				color: #ffab00;
+				color: #878787;
 			}
 			span {
 
 				&.overGame {
-					color: #ffab00;
+					color: #878787;
 				}
 			}
 
@@ -2150,14 +2147,18 @@
 			padding: 7px;
 			color: #595959;
 			border-style: solid;
-			border-width: 0px 0px 1px 0px;
-			border-color: #f7f7f7;
+			border-width: 0px 0px 2px 0px;
+			border-color: #f08512;
 			vertical-align: middle;
 			background: #ffffff;
 			font-size: 12px;
 
 			&.waiting {
 				color: #356bf7;
+			}
+
+			&.sus {
+				color: #1ba448;
 			}
 
 			&.listName {
@@ -2176,10 +2177,7 @@
 
 			&:nth-of-type(odd) {
 				border-right-width: 1px;
-			}
-
-			&:nth-of-type(even) {
-				border-left-width: 1px;
+				border-right-color: #eef0f6;
 			}
 
 			&:last-child {
