--- a/scss_2/_type.scss
+++ b/scss_2/_type.scss
@@ -186,7 +186,7 @@
         }
 
         i {
-            color: #356bf7;
+            color: #353535;
             font-size: 18px;
             margin: 0px 6px 0px 12px;
             transform: translateY(2px);
@@ -197,7 +197,7 @@
             height: 18px;
             margin: 0px 6px 0px 12px;
             transform: translateY(4px);
-            fill: #356bf7;
+            fill: #353535;
         }
 
         //遊戲標題
@@ -241,7 +241,7 @@
 
             .clock {
                 position: absolute;
-                background: #595959;
+                background: #f08512;
                 top: 50%;
                 right: -36px;
                 width: 30px;
