--- a/scss_3/_myself.scss
+++ b/scss_3/_myself.scss
@@ -818,6 +818,12 @@
                     color: #fff;
                     border-color: #59a936;
                 }
+
+                &.only {
+                    width: auto;
+                    color: #ffffff;
+                    pointer-events: none;
+                }
             }
         }
 
