--- a/scss_5/_rightside.scss
+++ b/scss_5/_rightside.scss
@@ -238,9 +238,9 @@
 
     //下大框
     .room {
-        width: 100%;
+        width: 95%;
         height: auto;
-        margin-top: 10px;
+        margin: 10px auto;
 
         //切換按鈕
         .twobut {
