--- a/scss_2/_rightside.scss
+++ b/scss_2/_rightside.scss
@@ -30,12 +30,12 @@
     .statusWindow {
         width: 100%;
         height: 113px;
-        background: #f5f5f5;
+        background: #ffffff;
         position: relative;
         
         p {
-            background: #ffffff;
-            color: #454545;
+            background: #f08512;
+            color: #ffffff;
             padding: 7px 15px;
             font-size: 12px;
         }
@@ -52,11 +52,12 @@
                 padding: 5px 15px 3px;
                 font-size: 14px;
                 position: relative;
-                background: #ffffff;
+                background: #ededed;
                 color: #454545;
                 margin-bottom: 3px;
 
                 &::before {
+                    display: none;
                     content: "";
                     position: absolute;
                     width: 1px;
@@ -126,9 +127,8 @@
         text-align: center;
 
         .title {
-            background: #ffffff;
-            border-bottom: solid 1px #f6f6f6;
-            color: #454545;
+            background: #f08512;
+            color: #ffffff;
             padding: 7px 15px;
             font-size: 12px;
             text-align: left;
@@ -219,22 +219,20 @@
             button {
                 width: 49.5%;
                 height: 100%;
-                background: #e6e6e6;
-                color: #595959;
+                background: #f4f4f4;
+                color: #7b7b7b;
                 font-size: 14px;
                 float: left;
                 margin-right: 1%;
                 border-radius: 3px 3px 0px 0px;
-                border: solid 1px transparent;
 
                 &:last-child {
                     margin: 0px;
                 }
 
                 &:hover,&:active,&.active {
-                    background: #ffffff;
-                    border: solid 1px #356bf7;
-                    color: #356bf7;
+                    background: #f08512;
+                    color: #ffffff;
                 }
             }
         }
@@ -245,16 +243,10 @@
             button {
                 width: 100%;
                 height: 100%;
-                background: #e6e6e6;
-                color: #595959;
+                background: #f08512;
+                color: #ffffff;
                 font-size: 14px;
                 border-radius: 3px 3px 0px 0px;
-                border: solid 1px transparent;
-
-                &:hover,&:active,&.active {
-                    background: #ffffff;
-                    color: #454545;
-                }
             }
         }
 
@@ -456,7 +448,7 @@
             overflow-y: auto;
             overflow-x: hidden;
             scrollbar-width: thin;
-            background: #f7f7f7;
+            background: #f08512;
 
             &::-webkit-scrollbar {
                 width: 5px;
@@ -469,7 +461,7 @@
             }
         
             &::-webkit-scrollbar-thumb {
-                background: linear-gradient(to right,#ffab00 0%, #ff4802 100%);
+                background: linear-gradient(to bottom,#ffab00 0%, #ff4802 100%);
                 border-radius: 10px;
             }
 
